analizador_semantico_arreglar/output/y.output
State 182 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 @1: /* empty */

    2 programa: @1 MAIN bloque_main

    3 @2: /* empty */

    4 bloque_main: INICIOBLOQUE @2 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    5 @3: /* empty */

    6 bloque: INICIOBLOQUE @3 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    7 @4: /* empty */

    8 declar_de_variables_locales: INI_DECLAR_VAR @4 variables_locales FIN_DECLAR_VAR
    9                            | /* empty */

   10 declar_de_subprogs: declar_de_subprogs declar_subprog
   11                   | /* empty */

   12 @5: /* empty */

   13 declar_subprog: cabecera_subprograma @5 bloque

   14 variables_locales: variables_locales cuerpo_declar_variables
   15                  | cuerpo_declar_variables

   16 cuerpo_declar_variables: primera mas_variables PYC
   17                        | DECLAR ID error
   18                        | DECLAR error
   19                        | error

   20 primera: DECLAR ID

   21 mas_variables: mas_variables COMA ID
   22              | /* empty */

   23 @6: /* empty */

   24 cabecera_subprograma: DECLAR ID @6 PARIZQ declaraciones_id PARDER

   25 declaraciones_id: declaraciones_id COMA param
   26                 | param
   27                 | declaraciones_id COMA error
   28                 | /* empty */

   29 param: DECLAR ID

   30 sentencias: sentencias sentencia
   31           | /* empty */

   32 sentencia: bloque
   33          | sentencia_asignacion
   34          | sentencia_if
   35          | sentencia_for_pascal
   36          | sentencia_while
   37          | sentencia_entrada
   38          | sentencia_salida
   39          | sentencia_return
   40          | sentencia_adelante_atras
   41          | sentencia_principio_lista

   42 sentencia_asignacion: ID OP_ASIGNACION expresion PYC
   43                     | error

   44 sentencia_if: SI PARIZQ expresion_if PARDER THEN _sentencia
   45             | SI PARIZQ expresion_if PARDER THEN _sentencia ELSE sentencia

   46 _sentencia: sentencia

   47 expresion_if: expresion

   48 asignacion_for_pascal: ID OP_ASIGNACION expresion TO valor
   49                      | error

   50 sentencia_for_pascal: FOR asignacion_for_pascal DO sentencia

   51 valor: CONST_INT
   52      | ID

   53 sentencia_while: MIENTRAS PARIZQ expresion_while PARDER sentencia

   54 expresion_while: expresion

   55 sentencia_entrada: METERDATOS lista_variables PYC

   56 lista_variables: lista_variables COMA ID
   57                | ID
   58                | error

   59 sentencia_salida: SACARDATOS lista_expresiones_o_cadena_sacar PYC

   60 lista_expresiones_o_cadena_sacar: lista_expresiones_o_cadena_sacar COMA expr_cad_sacar
   61                                 | expr_cad_sacar

   62 expr_cad_sacar: ID
   63               | CADENA

   64 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expr_cad
   65                           | expr_cad

   66 expr_cad: expresion

   67 sentencia_return: RETURN expresion PYC

   68 expresion: PARIZQ expresion PARDER
   69          | MASMAS expresion
   70          | MENOSMENOS expresion
   71          | expresion MASMAS
   72          | expresion MENOSMENOS
   73          | OP_LIST_UN expresion
   74          | MAS_MENOS expresion
   75          | NEGACION expresion
   76          | OP_AND_LIST expresion
   77          | expresion ARRARR expresion
   78          | expresion MAS_MENOS expresion
   79          | expresion OP_LIST_MUL expresion
   80          | expresion OP_OR_LOG expresion
   81          | expresion OP_AND_LOG expresion
   82          | expresion OP_EQ_NEQ expresion
   83          | expresion OP_REL expresion
   84          | expresion OP_MUL expresion
   85          | expresion MENOSMENOS expresion
   86          | expresion MASMAS expresion ARROBA expresion
   87          | ID
   88          | constante
   89          | funcion
   90          | agregado

   91 sentencia_adelante_atras: ID SENT_LIST PYC

   92 sentencia_principio_lista: DOLAR ID PYC

   93 constante: CONST_INT
   94          | CONST_FLOAT
   95          | CONST_BOOL
   96          | CONST_CHAR

   97 agregado: CORIZQ constante_lista CORDER

   98 constante_lista: constante_lista_int
   99                | constante_lista_float
  100                | constante_lista_bool
  101                | constante_lista_char

  102 constante_lista_int: constante_lista_int COMA CONST_INT
  103                    | CONST_INT

  104 constante_lista_float: constante_lista_float COMA CONST_FLOAT
  105                      | CONST_FLOAT

  106 constante_lista_bool: constante_lista_bool COMA CONST_BOOL
  107                     | CONST_BOOL

  108 constante_lista_char: constante_lista_char COMA CONST_CHAR
  109                     | CONST_CHAR

  110 funcion: cabecera_funcion argumentos_funcion

  111 cabecera_funcion: ID PARIZQ

  112 argumentos_funcion: lista_expresiones_o_cadena PARDER


Terminals, with rules where they appear

$end (0) 0
error (256) 17 18 19 27 43 49 58
OP_ASIGNACION (258) 42 48
ID (259) 17 20 21 24 29 42 48 52 56 57 62 87 91 92 111
CONST_INT (260) 51 93 102 103
CONST_FLOAT (261) 94 104 105
CONST_CHAR (262) 96 108 109
CONST_BOOL (263) 95 106 107
DECLAR (264) 17 18 20 24 29
PARDER (265) 24 44 45 53 68 112
PARIZQ (266) 24 44 45 53 68 111
METERDATOS (267) 55
MIENTRAS (268) 53
SI (269) 44 45
SACARDATOS (270) 59
FOR (271) 50
INICIOBLOQUE (272) 4 6
FINBLOQUE (273) 4 6
PYC (274) 16 42 55 59 67 91 92
TO (275) 48
CORIZQ (276) 97
CORDER (277) 97
COMA (278) 21 25 27 56 60 64 102 104 106 108
MAIN (279) 2
RETURN (280) 67
INI_DECLAR_VAR (281) 8
FIN_DECLAR_VAR (282) 8
DO (283) 50
SENT_LIST (284) 91
DOLAR (285) 92
CADENA (286) 63
ARRARR (287) 77
THEN (288) 44 45
ELSE (289) 45
OP_OR_LOG (290) 80
OP_AND_LOG (291) 81
OP_EQ_NEQ (292) 82
OP_REL (293) 83
MASMAS (294) 69 71 86
MENOSMENOS (295) 70 72 85
MAS_MENOS (296) 74 78
OP_LIST_MUL (297) 79
OP_MUL (298) 84
OP_AND_LIST (299) 76
OP_LIST_UN (300) 73
NEGACION (301) 75
ARROBA (302) 86


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
programa (49)
    on left: 2, on right: 0
@1 (50)
    on left: 1, on right: 2
bloque_main (51)
    on left: 4, on right: 2
@2 (52)
    on left: 3, on right: 4
bloque (53)
    on left: 6, on right: 13 32
@3 (54)
    on left: 5, on right: 6
declar_de_variables_locales (55)
    on left: 8 9, on right: 4 6
@4 (56)
    on left: 7, on right: 8
declar_de_subprogs (57)
    on left: 10 11, on right: 4 6 10
declar_subprog (58)
    on left: 13, on right: 10
@5 (59)
    on left: 12, on right: 13
variables_locales (60)
    on left: 14 15, on right: 8 14
cuerpo_declar_variables (61)
    on left: 16 17 18 19, on right: 14 15
primera (62)
    on left: 20, on right: 16
mas_variables (63)
    on left: 21 22, on right: 16 21
cabecera_subprograma (64)
    on left: 24, on right: 13
@6 (65)
    on left: 23, on right: 24
declaraciones_id (66)
    on left: 25 26 27 28, on right: 24 25 27
param (67)
    on left: 29, on right: 25 26
sentencias (68)
    on left: 30 31, on right: 4 6 30
sentencia (69)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 30 45 46 50 53
sentencia_asignacion (70)
    on left: 42 43, on right: 33
sentencia_if (71)
    on left: 44 45, on right: 34
_sentencia (72)
    on left: 46, on right: 44 45
expresion_if (73)
    on left: 47, on right: 44 45
asignacion_for_pascal (74)
    on left: 48 49, on right: 50
sentencia_for_pascal (75)
    on left: 50, on right: 35
valor (76)
    on left: 51 52, on right: 48
sentencia_while (77)
    on left: 53, on right: 36
expresion_while (78)
    on left: 54, on right: 53
sentencia_entrada (79)
    on left: 55, on right: 37
lista_variables (80)
    on left: 56 57 58, on right: 55 56
sentencia_salida (81)
    on left: 59, on right: 38
lista_expresiones_o_cadena_sacar (82)
    on left: 60 61, on right: 59 60
expr_cad_sacar (83)
    on left: 62 63, on right: 60 61
lista_expresiones_o_cadena (84)
    on left: 64 65, on right: 64 112
expr_cad (85)
    on left: 66, on right: 64 65
sentencia_return (86)
    on left: 67, on right: 39
expresion (87)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
    86 87 88 89 90, on right: 42 47 48 54 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86
sentencia_adelante_atras (88)
    on left: 91, on right: 40
sentencia_principio_lista (89)
    on left: 92, on right: 41
constante (90)
    on left: 93 94 95 96, on right: 88
agregado (91)
    on left: 97, on right: 90
constante_lista (92)
    on left: 98 99 100 101, on right: 97
constante_lista_int (93)
    on left: 102 103, on right: 98 102
constante_lista_float (94)
    on left: 104 105, on right: 99 104
constante_lista_bool (95)
    on left: 106 107, on right: 100 106
constante_lista_char (96)
    on left: 108 109, on right: 101 108
funcion (97)
    on left: 110, on right: 89
cabecera_funcion (98)
    on left: 111, on right: 110
argumentos_funcion (99)
    on left: 112, on right: 110


state 0

    0 $accept: . programa $end

    $default  reduce using rule 1 (@1)

    programa  go to state 1
    @1        go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

    2 programa: @1 . MAIN bloque_main

    MAIN  shift, and go to state 4


state 3

    0 $accept: programa $end .

    $default  accept


state 4

    2 programa: @1 MAIN . bloque_main

    INICIOBLOQUE  shift, and go to state 5

    bloque_main  go to state 6


state 5

    4 bloque_main: INICIOBLOQUE . @2 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 3 (@2)

    @2  go to state 7


state 6

    2 programa: @1 MAIN bloque_main .

    $default  reduce using rule 2 (programa)


state 7

    4 bloque_main: INICIOBLOQUE @2 . declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    INI_DECLAR_VAR  shift, and go to state 8

    $default  reduce using rule 9 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 9


state 8

    8 declar_de_variables_locales: INI_DECLAR_VAR . @4 variables_locales FIN_DECLAR_VAR

    $default  reduce using rule 7 (@4)

    @4  go to state 10


state 9

    4 bloque_main: INICIOBLOQUE @2 declar_de_variables_locales . declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 11 (declar_de_subprogs)

    declar_de_subprogs  go to state 11


state 10

    8 declar_de_variables_locales: INI_DECLAR_VAR @4 . variables_locales FIN_DECLAR_VAR

    error   shift, and go to state 12
    DECLAR  shift, and go to state 13

    variables_locales        go to state 14
    cuerpo_declar_variables  go to state 15
    primera                  go to state 16


state 11

    4 bloque_main: INICIOBLOQUE @2 declar_de_variables_locales declar_de_subprogs . sentencias FINBLOQUE
   10 declar_de_subprogs: declar_de_subprogs . declar_subprog

    DECLAR  shift, and go to state 17

    $default  reduce using rule 31 (sentencias)

    declar_subprog        go to state 18
    cabecera_subprograma  go to state 19
    sentencias            go to state 20


state 12

   19 cuerpo_declar_variables: error .

    $default  reduce using rule 19 (cuerpo_declar_variables)


state 13

   17 cuerpo_declar_variables: DECLAR . ID error
   18                        | DECLAR . error
   20 primera: DECLAR . ID

    error  shift, and go to state 21
    ID     shift, and go to state 22


state 14

    8 declar_de_variables_locales: INI_DECLAR_VAR @4 variables_locales . FIN_DECLAR_VAR
   14 variables_locales: variables_locales . cuerpo_declar_variables

    error           shift, and go to state 12
    DECLAR          shift, and go to state 13
    FIN_DECLAR_VAR  shift, and go to state 23

    cuerpo_declar_variables  go to state 24
    primera                  go to state 16


state 15

   15 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 15 (variables_locales)


state 16

   16 cuerpo_declar_variables: primera . mas_variables PYC

    $default  reduce using rule 22 (mas_variables)

    mas_variables  go to state 25


state 17

   24 cabecera_subprograma: DECLAR . ID @6 PARIZQ declaraciones_id PARDER

    ID  shift, and go to state 26


state 18

   10 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 10 (declar_de_subprogs)


state 19

   13 declar_subprog: cabecera_subprograma . @5 bloque

    $default  reduce using rule 12 (@5)

    @5  go to state 27


state 20

    4 bloque_main: INICIOBLOQUE @2 declar_de_variables_locales declar_de_subprogs sentencias . FINBLOQUE
   30 sentencias: sentencias . sentencia

    error         shift, and go to state 28
    ID            shift, and go to state 29
    METERDATOS    shift, and go to state 30
    MIENTRAS      shift, and go to state 31
    SI            shift, and go to state 32
    SACARDATOS    shift, and go to state 33
    FOR           shift, and go to state 34
    INICIOBLOQUE  shift, and go to state 35
    FINBLOQUE     shift, and go to state 36
    RETURN        shift, and go to state 37
    DOLAR         shift, and go to state 38

    bloque                     go to state 39
    sentencia                  go to state 40
    sentencia_asignacion       go to state 41
    sentencia_if               go to state 42
    sentencia_for_pascal       go to state 43
    sentencia_while            go to state 44
    sentencia_entrada          go to state 45
    sentencia_salida           go to state 46
    sentencia_return           go to state 47
    sentencia_adelante_atras   go to state 48
    sentencia_principio_lista  go to state 49


state 21

   18 cuerpo_declar_variables: DECLAR error .

    $default  reduce using rule 18 (cuerpo_declar_variables)


state 22

   17 cuerpo_declar_variables: DECLAR ID . error
   20 primera: DECLAR ID .

    error  shift, and go to state 50

    PYC   reduce using rule 20 (primera)
    COMA  reduce using rule 20 (primera)


state 23

    8 declar_de_variables_locales: INI_DECLAR_VAR @4 variables_locales FIN_DECLAR_VAR .

    $default  reduce using rule 8 (declar_de_variables_locales)


state 24

   14 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 14 (variables_locales)


state 25

   16 cuerpo_declar_variables: primera mas_variables . PYC
   21 mas_variables: mas_variables . COMA ID

    PYC   shift, and go to state 51
    COMA  shift, and go to state 52


state 26

   24 cabecera_subprograma: DECLAR ID . @6 PARIZQ declaraciones_id PARDER

    $default  reduce using rule 23 (@6)

    @6  go to state 53


state 27

   13 declar_subprog: cabecera_subprograma @5 . bloque

    INICIOBLOQUE  shift, and go to state 35

    bloque  go to state 54


state 28

   43 sentencia_asignacion: error .

    $default  reduce using rule 43 (sentencia_asignacion)


state 29

   42 sentencia_asignacion: ID . OP_ASIGNACION expresion PYC
   91 sentencia_adelante_atras: ID . SENT_LIST PYC

    OP_ASIGNACION  shift, and go to state 55
    SENT_LIST      shift, and go to state 56


state 30

   55 sentencia_entrada: METERDATOS . lista_variables PYC

    error  shift, and go to state 57
    ID     shift, and go to state 58

    lista_variables  go to state 59


state 31

   53 sentencia_while: MIENTRAS . PARIZQ expresion_while PARDER sentencia

    PARIZQ  shift, and go to state 60


state 32

   44 sentencia_if: SI . PARIZQ expresion_if PARDER THEN _sentencia
   45             | SI . PARIZQ expresion_if PARDER THEN _sentencia ELSE sentencia

    PARIZQ  shift, and go to state 61


state 33

   59 sentencia_salida: SACARDATOS . lista_expresiones_o_cadena_sacar PYC

    ID      shift, and go to state 62
    CADENA  shift, and go to state 63

    lista_expresiones_o_cadena_sacar  go to state 64
    expr_cad_sacar                    go to state 65


state 34

   50 sentencia_for_pascal: FOR . asignacion_for_pascal DO sentencia

    error  shift, and go to state 66
    ID     shift, and go to state 67

    asignacion_for_pascal  go to state 68


state 35

    6 bloque: INICIOBLOQUE . @3 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 5 (@3)

    @3  go to state 69


state 36

    4 bloque_main: INICIOBLOQUE @2 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE .

    $default  reduce using rule 4 (bloque_main)


state 37

   67 sentencia_return: RETURN . expresion PYC

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 83
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 38

   92 sentencia_principio_lista: DOLAR . ID PYC

    ID  shift, and go to state 88


state 39

   32 sentencia: bloque .

    $default  reduce using rule 32 (sentencia)


state 40

   30 sentencias: sentencias sentencia .

    $default  reduce using rule 30 (sentencias)


state 41

   33 sentencia: sentencia_asignacion .

    $default  reduce using rule 33 (sentencia)


state 42

   34 sentencia: sentencia_if .

    $default  reduce using rule 34 (sentencia)


state 43

   35 sentencia: sentencia_for_pascal .

    $default  reduce using rule 35 (sentencia)


state 44

   36 sentencia: sentencia_while .

    $default  reduce using rule 36 (sentencia)


state 45

   37 sentencia: sentencia_entrada .

    $default  reduce using rule 37 (sentencia)


state 46

   38 sentencia: sentencia_salida .

    $default  reduce using rule 38 (sentencia)


state 47

   39 sentencia: sentencia_return .

    $default  reduce using rule 39 (sentencia)


state 48

   40 sentencia: sentencia_adelante_atras .

    $default  reduce using rule 40 (sentencia)


state 49

   41 sentencia: sentencia_principio_lista .

    $default  reduce using rule 41 (sentencia)


state 50

   17 cuerpo_declar_variables: DECLAR ID error .

    $default  reduce using rule 17 (cuerpo_declar_variables)


state 51

   16 cuerpo_declar_variables: primera mas_variables PYC .

    $default  reduce using rule 16 (cuerpo_declar_variables)


state 52

   21 mas_variables: mas_variables COMA . ID

    ID  shift, and go to state 89


state 53

   24 cabecera_subprograma: DECLAR ID @6 . PARIZQ declaraciones_id PARDER

    PARIZQ  shift, and go to state 90


state 54

   13 declar_subprog: cabecera_subprograma @5 bloque .

    $default  reduce using rule 13 (declar_subprog)


state 55

   42 sentencia_asignacion: ID OP_ASIGNACION . expresion PYC

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 91
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 56

   91 sentencia_adelante_atras: ID SENT_LIST . PYC

    PYC  shift, and go to state 92


state 57

   58 lista_variables: error .

    $default  reduce using rule 58 (lista_variables)


state 58

   57 lista_variables: ID .

    $default  reduce using rule 57 (lista_variables)


state 59

   55 sentencia_entrada: METERDATOS lista_variables . PYC
   56 lista_variables: lista_variables . COMA ID

    PYC   shift, and go to state 93
    COMA  shift, and go to state 94


state 60

   53 sentencia_while: MIENTRAS PARIZQ . expresion_while PARDER sentencia

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion_while   go to state 95
    expresion         go to state 96
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 61

   44 sentencia_if: SI PARIZQ . expresion_if PARDER THEN _sentencia
   45             | SI PARIZQ . expresion_if PARDER THEN _sentencia ELSE sentencia

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion_if      go to state 97
    expresion         go to state 98
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 62

   62 expr_cad_sacar: ID .

    $default  reduce using rule 62 (expr_cad_sacar)


state 63

   63 expr_cad_sacar: CADENA .

    $default  reduce using rule 63 (expr_cad_sacar)


state 64

   59 sentencia_salida: SACARDATOS lista_expresiones_o_cadena_sacar . PYC
   60 lista_expresiones_o_cadena_sacar: lista_expresiones_o_cadena_sacar . COMA expr_cad_sacar

    PYC   shift, and go to state 99
    COMA  shift, and go to state 100


state 65

   61 lista_expresiones_o_cadena_sacar: expr_cad_sacar .

    $default  reduce using rule 61 (lista_expresiones_o_cadena_sacar)


state 66

   49 asignacion_for_pascal: error .

    $default  reduce using rule 49 (asignacion_for_pascal)


state 67

   48 asignacion_for_pascal: ID . OP_ASIGNACION expresion TO valor

    OP_ASIGNACION  shift, and go to state 101


state 68

   50 sentencia_for_pascal: FOR asignacion_for_pascal . DO sentencia

    DO  shift, and go to state 102


state 69

    6 bloque: INICIOBLOQUE @3 . declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    INI_DECLAR_VAR  shift, and go to state 8

    $default  reduce using rule 9 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 103


state 70

   87 expresion: ID .
  111 cabecera_funcion: ID . PARIZQ

    PARIZQ  shift, and go to state 104

    $default  reduce using rule 87 (expresion)


state 71

   93 constante: CONST_INT .

    $default  reduce using rule 93 (constante)


state 72

   94 constante: CONST_FLOAT .

    $default  reduce using rule 94 (constante)


state 73

   96 constante: CONST_CHAR .

    $default  reduce using rule 96 (constante)


state 74

   95 constante: CONST_BOOL .

    $default  reduce using rule 95 (constante)


state 75

   68 expresion: PARIZQ . expresion PARDER

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 105
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 76

   97 agregado: CORIZQ . constante_lista CORDER

    CONST_INT    shift, and go to state 106
    CONST_FLOAT  shift, and go to state 107
    CONST_CHAR   shift, and go to state 108
    CONST_BOOL   shift, and go to state 109

    constante_lista        go to state 110
    constante_lista_int    go to state 111
    constante_lista_float  go to state 112
    constante_lista_bool   go to state 113
    constante_lista_char   go to state 114


state 77

   69 expresion: MASMAS . expresion

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 115
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 78

   70 expresion: MENOSMENOS . expresion

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 116
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 79

   74 expresion: MAS_MENOS . expresion

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 117
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 80

   76 expresion: OP_AND_LIST . expresion

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 118
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 81

   73 expresion: OP_LIST_UN . expresion

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 119
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 82

   75 expresion: NEGACION . expresion

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    expresion         go to state 120
    constante         go to state 84
    agregado          go to state 85
    funcion           go to state 86
    cabecera_funcion  go to state 87


state 83

   67 sentencia_return: RETURN expresion . PYC
   71 expresion: expresion . MASMAS
   72          | expresion . MENOSMENOS
   77          | expresion . ARRARR expresion
   78          | expresion . MAS_MENOS expresion
   79          | expresion . OP_LIST_MUL expresion
   80          | expresion . OP_OR_LOG expresion
   81          | expresion . OP_AND_LOG expresion
   82          | expresion . OP_EQ_NEQ expresion
   83          | expresion . OP_REL expresion
   84          | expresion . OP_MUL expresion
   85          | expresion . MENOSMENOS expresion
   86          | expresion . MASMAS expresion ARROBA expresion

    PYC          shift, and go to state 121
    ARRARR       shift, and go to state 122
    OP_OR_LOG    shift, and go to state 123
    OP_AND_LOG   shift, and go to state 124
    OP_EQ_NEQ    shift, and go to state 125
    OP_REL       shift, and go to state 126
    MASMAS       shift, and go to state 127
    MENOSMENOS   shift, and go to state 128
    MAS_MENOS    shift, and go to state 129
    OP_LIST_MUL  shift, and go to state 130
    OP_MUL       shift, and go to state 131


state 84

   88 expresion: constante .

    $default  reduce using rule 88 (expresion)


state 85

   90 expresion: agregado .

    $default  reduce using rule 90 (expresion)


state 86

   89 expresion: funcion .

    $default  reduce using rule 89 (expresion)


state 87

  110 funcion: cabecera_funcion . argumentos_funcion

    ID           shift, and go to state 70
    CONST_INT    shift, and go to state 71
    CONST_FLOAT  shift, and go to state 72
    CONST_CHAR   shift, and go to state 73
    CONST_BOOL   shift, and go to state 74
    PARIZQ       shift, and go to state 75
    CORIZQ       shift, and go to state 76
    MASMAS       shift, and go to state 77
    MENOSMENOS   shift, and go to state 78
    MAS_MENOS    shift, and go to state 79
    OP_AND_LIST  shift, and go to state 80
    OP_LIST_UN   shift, and go to state 81
    NEGACION     shift, and go to state 82

    lista_expresiones_o_cadena  go to state 132
    expr_cad                    go to state 133
    expresion                   go to state 134
    constante                   go to state 84
    agregado                    go to state 85
    funcion                     go to state 86
    cabecera_funcion            go to state 87
    argumentos_funcion          go to state 135


state 88

   92 sentencia_principio_lista: DOLAR ID . PYC

    PYC  shift, and go to state 136


state 89

   21 mas_variables: mas_variables COMA ID .

    $default  reduce using rule 21 (mas_variables)


state 90

   24 cabecera_subprograma: DECLAR ID @6 PARIZQ . declaraciones_id PARDER

    DECLAR  shift, and go to state 137

    $default  reduce using rule 28 (declaraciones_id)

    declaraciones_id  go to state 138
    param             go to state 139


state 91

   42 sentencia_asignacion: ID OP_ASIGNACION expresion . PYC
   71 expresion: expresion . MASMAS
   72          | expresion . MENOSMENOS
   77          | expresion . ARRARR expresion
   78          | expresion . MAS_MENOS expresion
   79          | expresion . OP_LIST_MUL expresion
   80          | expresion . OP_OR_LOG expresion
   81          | expresion . OP_AND_LOG expresion
   82          | expresion . OP_EQ_NEQ expresion
   83          | expresion . OP_REL expresion
   84          | expresion . OP_MUL expresion
   85          | expresion . MENOSMENOS expresion
   86          | expresion . MASMAS expresion ARROBA expresion

    PYC          shift, and go to state 140
    ARRARR       shift, and go to state 122
    OP_OR_LOG    shift, and go to state 123
    OP_AND_LOG   shift, and go to state 124
    OP_EQ_NEQ    shift, and go to state 125
    OP_REL       shift, and go to state 126
    MASMAS       shift, and go to state 127
    MENOSMENOS   shift, and go to state 128
    MAS_MENOS    shift, and go to state 129
    OP_LIST_MUL  shift, and go to state 130
    OP_MUL       shift, and go to state 131


state 92

   91 sentencia_adelante_atras: ID SENT_LIST PYC .

    $default  reduce using rule 91 (sentencia_adelante_atras)


state 93
